--- a/src/BigVisibleCruise/SettingsWindow.xaml
+++ b/src/BigVisibleCruise/SettingsWindow.xaml
@@ -58,8 +58,13 @@
 
 			<Label Grid.Column="0" Grid.Row="1" Height="25" Margin="2,5,2,5" Content="Dashboard Url"/>
 			<DockPanel Grid.Column="1" Grid.Row="1" LastChildFill="True">
-				<!--<Image DockPanel.Dock="Right" Source="check.png" Visibility="{Binding Path=(Validation.HasError), ElementName=UrlTextBox, Converter={StaticResource BooleanToVisibleConverter}, ConverterParameter=false}" Height="25" Width="25" Margin="10,0,0,0" />-->
+				<Image DockPanel.Dock="Right" Source="check.png" Visibility="{Binding Path=(Validation.HasError), ElementName=UrlTextBox, Converter={StaticResource BooleanToVisibleConverter}, ConverterParameter=false}" Height="25" Width="25" Margin="10,0,0,0" />
 				<Image DockPanel.Dock="Right" Source="stop.png" Visibility="{Binding Path=(Validation.HasError), ElementName=UrlTextBox, Converter={StaticResource BooleanToVisibleConverter}}" Height="25" Width="25" Margin="10,0,0,0" />
+
+				<TextBlock DockPanel.Dock="Right"  FontStyle="Italic" Margin="10,0,0,0" HorizontalAlignment="Right" VerticalAlignment="Center">
+					<Hyperlink Click="Validate_Click">check url</Hyperlink>
+				</TextBlock>
+
 				<TextBox Name="UrlTextBox" Style="{StaticResource TextBoxWithValidation}" Height="25" Width="350">
 					<Binding Path="Dashboard" UpdateSourceTrigger="LostFocus" Mode="TwoWay" Source="{x:Static BigVisibleCruise_Properties:Settings.Default}" Converter="{StaticResource CruiseDashboardToStatusUrlConverter}">
 						<Binding.ValidationRules>
@@ -72,7 +77,7 @@
 			<Label Grid.Column="0" Grid.Row="2" Height="25" Margin="2,5,2,5" VerticalAlignment="Top" Content="Auto Refresh Rate"/>
 			<Label Grid.Column="1" Grid.Row="2" Height="25" Margin="2,5,2,5" Foreground="Gray" Content="{Binding ElementName=RefreshSlider, Path=Value, Converter={StaticResource SliderValueInSecondsToReadableTimeFormatConverter}}" />
 			<Slider Name="RefreshSlider"  Grid.Column="1" Grid.Row="3" Margin="2,5,2,5" AutoToolTipPlacement="None"
-					Minimum="15" Maximum="600" SmallChange="15" LargeChange="60" 
+					Minimum="15" Maximum="600" SmallChange="30" LargeChange="60" 
 					Value="{Binding Source={x:Static Properties:Settings.Default}, Path=PollFrequency, Converter={StaticResource TimeSpanToDoubleConverter}, Mode=TwoWay}" />
 
 			<Label Grid.Column="0" Grid.Row="4" Height="25" Margin="2,5,2,5" Content="Skin"/>
@@ -90,7 +95,7 @@
 			</ComboBox>
 
 			<DockPanel HorizontalAlignment="Right" Margin="0,10,0,0" Width="Auto" LastChildFill="False" Grid.Column="1" Grid.Row="5" VerticalAlignment="Stretch" Grid.ColumnSpan="1">
-				<TextBlock DockPanel.Dock="Right"  Padding="10,1,10,1" Margin="2,5,10,5" FontStyle="Italic">
+				<TextBlock DockPanel.Dock="Right"  Padding="10,1,10,1" Margin="2,5,10,5" FontStyle="Italic" HorizontalAlignment="Right">
 					<Hyperlink Click="Close_Click">Close</Hyperlink>
 				</TextBlock>
 			</DockPanel>
