--- a/trunk/src/BigVisibleCruise/BigVisibleCruiseWindow.xaml
+++ b/trunk/src/BigVisibleCruise/BigVisibleCruiseWindow.xaml
@@ -6,23 +6,60 @@
     Icon="Cinema-Display-graphite.ico"
     Title="Big Visible Cruise"
 	KeyDown="Window_KeyDown" 
-    Background="Black" Height="400" Width="600">
+    Background="Black" 
+	Height="400" Width="600">
 
+	<Window.Resources>
+
+		<Style x:Key="StandardNavigationContainer" TargetType="{x:Type TextBlock}">
+			<Setter Property="VerticalAlignment" Value="Center" />
+			<Setter Property="Padding" Value="10,10,10,10" />
+			<Setter Property="FontFamily" Value="Segoe Script, Verdana" />
+			<Setter Property="FontSize" Value="8" />
+			<Setter Property="Foreground" Value="Gray" />
+		</Style>
+
+		<Style x:Key="HostAction" TargetType="{x:Type Hyperlink}">
+			<Setter Property="FontWeight" Value="Bold" />
+			<Setter Property="FontFamily" Value="Segoe Script, Verdana" />
+			<Setter Property="FontSize" Value="10" />
+			<Setter Property="Foreground" Value="LightGray" />				  
+		</Style>
+		
+		<Style x:Key="Logo" TargetType="{x:Type TextBlock}">
+			<Setter Property="FontSize" Value="16" />
+			<Setter Property="FontWeight" Value="Bold" />
+			<Setter Property="Padding" Value="10,10,10,10" />
+			<Setter Property="FontFamily" Value="Segoe Script, Verdana" />
+			<Setter Property="Foreground" Value="White" />
+		</Style>
+		
+	</Window.Resources>
+	
 	<DockPanel>
 
-    <Border DockPanel.Dock="Bottom">
-      <DockPanel LastChildFill="False">
-        <TextBlock DockPanel.Dock="Left"  Text="Big Visible Cruise" FontSize="16" FontWeight="Bold"  Padding="10,10,10,10"  Foreground="White" FontFamily="Segoe Script, Verdana" />
-		  <TextBlock DockPanel.Dock="Right"  VerticalAlignment="Center"  Text="F12 - Open Options" FontSize="8" FontWeight="Bold"  Padding="10,10,10,10"  Foreground="Gray" FontFamily="Segoe Script, Verdana" />		  
-		  <TextBlock DockPanel.Dock="Right"  VerticalAlignment="Center"  Text="F11 - Toggle Fullscreen" FontSize="8" FontWeight="Bold"  Padding="10,10,10,10"  Foreground="Gray" FontFamily="Segoe Script, Verdana" />
-		  <TextBlock DockPanel.Dock="Right"  VerticalAlignment="Center"  Text="F5 - Force Refresh" FontSize="8" FontWeight="Bold"  Padding="10,10,10,10"  Foreground="Gray" FontFamily="Segoe Script, Verdana" />		  
-      </DockPanel>
-    </Border>
+		<Border DockPanel.Dock="Bottom">
+		  <DockPanel LastChildFill="False">
+			<TextBlock DockPanel.Dock="Left"  Style="{StaticResource Logo}" Text="Big Visible Cruise" />
+			<TextBlock DockPanel.Dock="Right" Style="{StaticResource StandardNavigationContainer}">
+				<Hyperlink Style="{StaticResource HostAction}">Open Options</Hyperlink>
+				<TextBlock>(F12)</TextBlock>
+			</TextBlock>
+			<TextBlock DockPanel.Dock="Right" Style="{StaticResource StandardNavigationContainer}">
+				<Hyperlink Style="{StaticResource HostAction}">Toggle Fullscreen</Hyperlink>
+				<TextBlock>(F11)</TextBlock>
+			</TextBlock>
+			<TextBlock DockPanel.Dock="Right" Style="{StaticResource StandardNavigationContainer}">
+				<Hyperlink Style="{StaticResource HostAction}">Force Refresh</Hyperlink>
+				<TextBlock>(F5)</TextBlock>
+			</TextBlock>		  
+		  </DockPanel>
+		</Border>
+	    
+		<Viewbox DockPanel.Dock="Top" Stretch="Fill">
+		  <ItemsControl ItemsSource="{Binding}" Style="{DynamicResource LiveStatusStyle}" />
+		</Viewbox>
     
-    <Viewbox DockPanel.Dock="Top" Stretch="Fill">
-      <ItemsControl ItemsSource="{Binding}" Style="{DynamicResource LiveStatusStyle}" />
-    </Viewbox>
-    
-  </DockPanel>
+	</DockPanel>
 
 </Window>
